--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FirebaseLogin">
+        android:theme="@style/Theme.AppCompat.Light">
         <activity android:name=".changePasswordActivity"></activity>
         <activity android:name=".HelloActivity" />
         <activity android:name=".loginActivity" />
